--- a/src/components/HauntedTerminal/HauntedTerminal.css
+++ b/src/components/HauntedTerminal/HauntedTerminal.css
@@ -20,7 +20,7 @@
 
 
 .text {
-	position: relative;
+	/* position: relative; */
 	padding: 30px;
 	font-size: 35px;
 	font-family: 'M PLUS 1p', 'Open Sans', sans-serif;
@@ -30,11 +30,8 @@
 	content: attr(data-decrypted-text);
 	position: absolute;
 	opacity: 0;
-	left: 0;
-	top: 0;
 	width: 100%;
 	height: 100%;
-	padding: 30px;
 	overflow: hidden;
 	color: #42C3C8;
 }
@@ -45,7 +42,7 @@
 }
 
 .text.glitch-writing {
-	animation: glitch-skew 1s steps(10, end) infinite alternate-reverse;
+	/* animation: glitch-skew 1s steps(10, end) infinite alternate-reverse; */
 }
 
 .text.glitch-writing::after, .text.glitch-writing::before {
@@ -62,23 +59,23 @@
 
 @keyframes glitch-skew {
 	0% {
-		transform: skew(5deg);
+		transform: skew(0deg);
 	}
 
 	10% {
-		transform: skew(1deg);
+		transform: skew(0deg);
 	}
 
 	20% {
-		transform: skew(-3deg);
+		transform: skew(0deg);
 	}
 
 	30% {
-		transform: skew(-2deg);
+		transform: skew(0deg);
 	}
 
 	40% {
-		transform: skew(-2deg);
+		transform: skew(0deg);
 	}
 
 	50% {
@@ -90,15 +87,15 @@
 	}
 
 	70% {
-		transform: skew(4deg);
+		transform: skew(0deg);
 	}
 
 	80% {
-		transform: skew(4deg);
+		transform: skew(0deg);
 	}
 
 	90% {
-		transform: skew(5deg);
+		transform: skew(0deg);
 	}
 
 	100% {
